tests/errors/runtime.ConversionFailed.res
true
false
>> Runtime | File: runtime.ConversionFailed.art
     error | Line: 3
           | 
           | conversion failed: "boom"
           | from :string
           | to   :boolean